# flyciro

./: .gitignore  AUTO_AUTHORIZATION_FEATURE.md  AUTO_IMPORT_FEATURE.md  AUTO_REGISTER_INTEGRATION_COMPLETE.md  FINAL_STATUS.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  GOOGLE_SIGNIN_BUTTON_FIX.md  IMPORT_BUTTON_FEATURE.md  LOGIN_STATE_FIX.md  MIGRATION_GUIDE.md  README.md  TESTING_GUIDE.md  UI_INTEGRATION_COMPLETE.md  UI_STYLE_IMPROVEMENTS.md  api_test_example.js  api_test_example.py  index.html  package-lock.json  package.json  tailwind.config.js  test-commands.md  tsconfig.json  vite.config.js  vite.config.ts  启动开发模式.bat  打包应用.bat  推送说明.txt  迁移完成.txt
.github/workflows/: build.yml
aws-builder-automation/: README.md  package.json
aws-builder-automation/src/: api.ts  store.ts
locales/: en-US.json  ru-RU.json  zh-CN.json
src/: App.tsx  api.ts  i18n.tsx  index.css  kamiApi.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: account.rs  auth.rs  aws_sso_client.rs  browser_automation.rs  card_auth.rs  commands.rs  database.rs  graph_api.rs  lib.rs  main.rs  state.rs
src-tauri/src/auto_register/: aws_sso_client.rs  browser_automation.rs  database.rs  graph_api.rs  mod.rs  models.rs
src-tauri/src/commands/: auto_register_cmd.rs  auto_register_cmd_backup.rs  card_auth_cmd.rs  mod.rs
src-tauri/src/commands/kiro/: account_cmd.rs
src-tauri/src/kiro/: main.rs  mod.rs
src-tauri/src/kiro/commands/: mod.rs  register_cmd.rs  update_cmd.rs
src-tauri/src/providers/: idc.rs
src/api/: autoRegister.ts  cardAuth.ts  cursorApi.js
src/components/: AccountsTable.css  AccountsTable.tsx  AutoRegister.tsx  CardAuth.tsx  ControlPanel.css  ControlPanel.tsx  Home.tsx  LoginPanel.css  LoginPanel.tsx  Sidebar.tsx  TitleBar.css  TitleBar.tsx
(+40 files in other folders)
