[package]
name = "unified-account-manager"
version = "2.0.0"
description = "Unified Account Manager - Kiro & AWS Builder ID"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "unified_account_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
headless_chrome = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
urlencoding = "2"
md5 = "0.7"
url = "2.5"
open = "5.0"
tiny_http = "0.12"
sha2 = "0.10"
base64 = "0.22"
ciborium = "0.2"
hex = "0.4"
cookie = "0.18"
async-trait = "0.1"
dirs = "5"
tokio-tungstenite = "0.24"
futures-util = "0.3"


[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
